--- a/localisation/TD_01_flavour_wirosepan_l_english.yml
+++ b/localisation/TD_01_flavour_wirosepan_l_english.yml
@@ -108,7 +108,7 @@
 
  church_of_selfless_generosity: "Church of Selfless Generosity"
  church_of_selfless_generosity_tt: "The modifier is enhanced with §YYearly Inflation Reduction§! due to the §YChurch of Selfless Generosity§!."
- no_church_of_selfless_generosity_tt: "If we establish the §YChurch of Selfless Generosity§!, the modifier will be enhanced with §YYearly Inflation Reduction§!.%"
+ no_church_of_selfless_generosity_tt: "If we establish the §YChurch of Selfless Generosity§!, the modifier will be enhanced with §YYearly Inflation Reduction§!."
  church_of_selfless_generosity_desc: "§TIf we follow Saletiarn the Generous, we will also gain -0.1 Inflation Reduction.§!"
 
  church_of_relentless_ambition: "Church of Relentless Ambition"
