--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -3,7 +3,7 @@
  TAEDIUM_BOOKMARK_DESC: "Mysentria has experienced various disasters in the recent times - Bunelisuli horde, plagues, internal struggles and economic isolation. Trade routes to the distant lands of Samadia and Hengtua have been severed by ravagin pirates in the Maqitan Sea and nomadic empires of the steppe, which has lead to some merchants now hoping to find alternative routes through the trecherous Niheyan Ocean. Meanwhile, The Saelian Empires is trying to reform its rotting government, while the rest of the Sigilian community grows tired of the Universal Monarchy. Donuçakar and Capiranellan League desperately attempt to defend against the invasion of prideful Chilverchian princes seeking only loot and glory.\nBalance of power in the entire continent is close to a breaking point and everyone is asking themselves: who will emerge victorious?"
 
  TAEDIUM_NORTHERN_LANDS_TITLE: "£lobby_list_entry_2£"
- TAEDIUM_NORTHERN_LANDS_DESC: "Despite internal instability, the Ehren Confederation is dominant over the northern straits with influence all over the region. Tummic and Nifthemi resistance is struggling to overcome the growing ambitions of Consul Diedrich Schumacher as the remnants of the first confederacy lick their wounds in Dorchean Isles. Marstonian duchy of Ziemelia is satisfied with their recent territorial gains, but not for long - looking at their cultural bretherens and neighbouring merchant Republic of Uzkolia as a potential target. Sons of King Eadwig fight for his crown while resisting Indriger and Labosian opportunists from abroad. Who will finally unite the region and achieve indisputable dominance?"
+ TAEDIUM_NORTHERN_LANDS_DESC: "Despite internal instability, the Ehren Confederation is dominant over the northern straits with her influence stretching across the whole North. Tummic and Nifthemi resistance is struggling to overcome the growing ambitions of Consul Diedrich Schumacher. Marstonian king Kaupo Miezitis is not satisfied with his recent territorial gains, looking at the southern Valdniestes and the weakened Republic of Uzkolia. Sons of King Eadwig fight for his crown, while Indriger and Labosian opportunists enroach the kingdom from all sides. People of Tummland and Várrinsaáhpi slowly grow in power and profit from trading in fur, ambergris and copper, now seeking to expand their influence deeper into the Syvämetsän forest.\nMany wish to control the profitable trade routes of the north, however only one hegemon will be able to reign over all of the Maria Borealis."
 
  TAEDIUM_AQERB_BOOKMARK_TITLE: "£lobby_list_entry_3£"
  TAEDIUM_AQERB_BOOKMARK_DESC: "The Alkalen is a frontline of major conflict between many civilizations. Brave king of Narbona aggresively expands into Yaltazim mainland with little to no resistance, while the Kingdom of Ignidunta seeks to completely control regional trade routes. But all is not lost to Yaltazims - tepans of Nahshaharos and Antawil have ambitions of their own. In Azguramajal, Maqhazian city-states slowly penetrate the treacherous mountains. Narbonese borderlands slowly get tired of their overlord and plot to gain independence. With no place to expand, many of these states look for new frontiers in the lands beyond the ocean..."
@@ -15,7 +15,7 @@
  TAEDIUM_WASICHANTLIA_BOOKMARK_DESC: ""
 
  TAEDIUM_SAMADIA_BOOKMARK_TITLE: "£lobby_list_entry_6£"
- TAEDIUM_SAMADIA_BOOKMARK_DESC: "REPLACE_ME"
+ TAEDIUM_SAMADIA_BOOKMARK_DESC: ""
 
  TAEDIUM_PAQIVAZ_BOOKMARK_TITLE: "£lobby_list_entry_7£"
  TAEDIUM_PAQIVAZ_BOOKMARK_DESC: ""
