--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -296,6 +296,7 @@
  saelian.9.desc: "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
  saelian.9.a: "We shall remain faithful to [Emperor.Monarch.GetName]."
  swore_fealty_to_emperor_tt: "You will NOT be able to leave the Saelian Empire for 75 years."
+ SWORE_FEALTY: "Swore Fealty"
  saelian.9.b: "We shall forge our own path."
  prince_rejected_kingship: "Repressed Ambitions"
 
