Parroutan Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1009,7 +1009,7 @@
  PROV1008: "Azgur"
  PROV1009: "Jabal Qalil" #mountain low
  PROV1010: "1010"
- PROV1011: "1011"
+ PROV1011: "Sautan" #the wall
  PROV1012: "Fawud"
  PROV1013: "Blue Sea"
  PROV1014: "Salmitäinen"
@@ -3908,7 +3908,7 @@
  PROV3907: "3907"
  PROV3908: "3908"
  PROV3909: "Khombun"
- PROV3910: "3910"
+ PROV3910: "Baa"
  PROV3911: "3911"
  PROV3912: "3912"
  PROV3913: "Siangen"
@@ -4412,7 +4412,7 @@
  PROV4411: "Aosee" #harbour
  PROV4412: "Fonj" #the city
  PROV4413: "Fifasu" #white river
- PROV4414: "4414"
+ PROV4414: "Ourdau" #far path
  PROV4415: "Abrishram"
  PROV4416: "Darband"
  PROV4417: "Dosabalen"
@@ -4440,24 +4440,24 @@
  PROV4439: "Matpus"
  PROV4440: "4440"
  PROV4441: "4441"
- PROV4442: "4442"
- PROV4443: "4443"
- PROV4444: "4444"
+ PROV4442: "Ouaman" #two rivers
+ PROV4443: "Sartikoui" #iron cave
+ PROV4444: "Korospar" #shepard's field
  PROV4445: "Gaimadi"
  PROV4446: "Tsibirin"
  PROV4447: "Keslak"
- PROV4448: "4448"
- PROV4449: "4449"
+ PROV4448: "Sirnjey" #Barley Pasture
+ PROV4449: "Gittmip" #new grass
  PROV4450: "Kadivul"
- PROV4451: "4451"
- PROV4452: "4452"
- PROV4453: "4453"
- PROV4454: "4454"
- PROV4455: "4455"
- PROV4456: "4456"
+ PROV4451: "Dporosr" #city of glory
+ PROV4452: "Edskio" #to fertilize forever
+ PROV4453: "Epidske" #glorious prayer
+ PROV4454: "Armkao" #look towards north
+ PROV4455: "Njaiotour" #thunder's sleep
+ PROV4456: "Eleil" #Obtained Heart
  PROV4457: "4457"
  PROV4458: "4458"
- PROV4459: "4459"
+ PROV4459: "Prgene" #herbs
  PROV4460: "4460"
  PROV4461: "4461"
  PROV4462: "4462"
@@ -4467,8 +4467,8 @@
  PROV4466: "4466"
  PROV4467: "4467"
  PROV4468: "4468"
- PROV4469: "4469"
- PROV4470: "4470"
+ PROV4469: "Kattak" #lamb meadow, Kattak
+ PROV4470: "Matteipst" #east wealth
  PROV4471: "4471"
  PROV4472: "4472"
  PROV4473: "4473"
@@ -4482,24 +4482,24 @@
  PROV4481: "4481"
  PROV4482: "4482"
  PROV4483: "4483"
- PROV4484: "4484"
- PROV4485: "4485"
+ PROV4484: "Piprnei" #incense grow
+ PROV4485: "Dpouar" #far city, Dpouar
  PROV4486: "4486"
  PROV4487: "4487"
- PROV4488: "4488"
+ PROV4488: "Eukast" #Daughter village, Eukast
  PROV4489: "4489"
- PROV4490: "4490"
- PROV4491: "4491"
- PROV4492: "4492"
- PROV4493: "4493"
- PROV4494: "4494"
- PROV4495: "4495"
+ PROV4490: "Dodouier" #high pasture
+ PROV4491: "Souk" #descend
+ PROV4492: "Kassenji" #cloud church
+ PROV4493: "Pajkoul" #mountain to divide
+ PROV4494: "Mourado" #Pale Horse, Mourado
+ PROV4495: "Dautoši" #Great Fort, Dautoši
  PROV4496: "4496"
- PROV4497: "4497"
- PROV4498: "4498"
- PROV4499: "4499"
- PROV4500: "4500"
- PROV4501: "4501"
+ PROV4497: "Gittgou" #old grass, Gittgou
+ PROV4498: "Kedueph" #limitless stars, Kedueph
+ PROV4499: "Phawadgi" #to fawud
+ PROV4500: "Siuipend" #no drink
+ PROV4501: "Goutau" #thistle
  PROV4502: "Raivas"
  PROV4503: "Allia"
  PROV4504: "Tursast"
