Kapeti Prov + Dynamic Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4467,7 +4467,7 @@
  PROV4466: "4466"
  PROV4467: "4467"
  PROV4468: "4468"
- PROV4469: "Kattak" #lamb meadow, Kattak
+ PROV4469: "Kattak" #lamb meadow
  PROV4470: "Matteipst" #east wealth
  PROV4471: "4471"
  PROV4472: "4472"
@@ -4478,25 +4478,25 @@
  PROV4477: "4477"
  PROV4478: "4478"
  PROV4479: "4479"
- PROV4480: "4480"
- PROV4481: "4481"
- PROV4482: "4482"
- PROV4483: "4483"
+ PROV4480: "Asire" #old home
+ PROV4481: "Kapazoa"
+ PROV4482: "Detdafi" #to make cloth
+ PROV4483: "Karaye" #Far hill
  PROV4484: "Piprnei" #incense grow
  PROV4485: "Dpouar" #far city, Dpouar
- PROV4486: "4486"
- PROV4487: "4487"
- PROV4488: "Eukast" #Daughter village, Eukast
- PROV4489: "4489"
+ PROV4486: "Benjdoa" #hot flower
+ PROV4487: "Kankare" #Kankar village
+ PROV4488: "Eukast" #Daughter village
+ PROV4489: "Remwey" #equal(twin) brother
  PROV4490: "Dodouier" #high pasture
  PROV4491: "Souk" #descend
  PROV4492: "Kassenji" #cloud church
  PROV4493: "Pajkoul" #mountain to divide
- PROV4494: "Mourado" #Pale Horse, Mourado
- PROV4495: "Dautoši" #Great Fort, Dautoši
- PROV4496: "4496"
- PROV4497: "Gittgou" #old grass, Gittgou
- PROV4498: "Kedueph" #limitless stars, Kedueph
+ PROV4494: "Mourado" #Pale Horse
+ PROV4495: "Dautoši" #Great Fort
+ PROV4496: "Peszp" #Wide field
+ PROV4497: "Gittgou" #old grass
+ PROV4498: "Kedueph" #limitless stars
  PROV4499: "Phawadgi" #to fawud
  PROV4500: "Siuipend" #no drink
  PROV4501: "Goutau" #thistle
