Bosonapan Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4428,17 +4428,17 @@
  PROV4427: "Obi" #home
  PROV4428: "Ohye" #border
  PROV4429: "Nekwae" #across forest
- PROV4430: "4430"
- PROV4431: "4431"
- PROV4432: "4432"
- PROV4433: "4433"
- PROV4434: "4434"
- PROV4435: "4435"
- PROV4436: "4436"
- PROV4437: "4437"
- PROV4438: "4438"
+ PROV4430: "Telanj" #flow branch
+ PROV4431: "Sutili" #Mushroom forehead
+ PROV4432: "Ketgonj" #forest road
+ PROV4433: "Jeiwel" #World nose
+ PROV4434: "Gierpmo" #giera city
+ PROV4435: "Mwentene" #dew drys in sun
+ PROV4436: "Kapatene"
+ PROV4437: "Nagdakol" #elephant hill
+ PROV4438: "Mbanpmo" #mbani city
  PROV4439: "Matpus"
- PROV4440: "4440"
+ PROV4440: "Nagwke" #elephant forest
  PROV4441: "4441"
  PROV4442: "Ouaman" #two rivers
  PROV4443: "Sartikoui" #iron cave
@@ -4455,10 +4455,10 @@
  PROV4454: "Armkao" #look towards north
  PROV4455: "Njaiotour" #thunder's sleep
  PROV4456: "Eleil" #Obtained Heart
- PROV4457: "4457"
- PROV4458: "4458"
+ PROV4457: "Kenei" #water's throat
+ PROV4458: "Gasikara"
  PROV4459: "Prgene" #herbs
- PROV4460: "4460"
+ PROV4460: "Nanjek" #chin
  PROV4461: "4461"
  PROV4462: "4462"
  PROV4463: "4463"
