Nyanbani Prov Names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4459,11 +4459,11 @@
  PROV4458: "Gasikara"
  PROV4459: "Prgene" #herbs
  PROV4460: "Nanjek" #chin
- PROV4461: "4461"
- PROV4462: "4462"
- PROV4463: "4463"
- PROV4464: "4464"
- PROV4465: "4465"
+ PROV4461: "Akapir" #carpenter's forest
+ PROV4462: "Nyanba"
+ PROV4463: "Soloo" #high
+ PROV4464: "Amafe" #market town
+ PROV4465: "Kinikia" #near Kinia(Okoeraura)
  PROV4466: "Irigo" #Iron forest
  PROV4467: "Latkini" #lower
  PROV4468: "Apkini" #upper
