--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3906,7 +3906,7 @@
  PROV3905: "3905"
  PROV3906: "3906"
  PROV3907: "3907"
- PROV3908: "3908"
+ PROV3908: "Manko" #mangrove
  PROV3909: "Khombun"
  PROV3910: "Baa"
  PROV3911: "3911"
