Updated Kabonen NI loc
cuz they aren't Frankrani anymore.

--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -3,12 +3,12 @@
  kabonen_ideas: "Kabonenian Ideas"
  kabonen_ideas_start: "Kabonenian Traditions"
  kabonen_ideas_bonus: "Kabonenian Ambition"
- kabonen_legacy_of_the_muzbahi: "Legacy of the Muzbahi Explorers"
+ kabonen_legacy_of_the_muzbahi: "Legacy of the Mawaqi Explorers"
  kabonen_legacy_of_the_muzbahi_desc: "We are descendants of the western people, that valued hard work over anything, so we will work as hard to keep living here."
  kabonen_lessons_of_the_pirate_conflicts: "Lessons of the Pirate Hunting"
  kabonen_lessons_of_the_pirate_conflicts_desc: "Tajmuqi pirates being a menace for our trade lines, so we have to adapt our naval doctrines accordingly. The pirates don't stand a chance against a Galley Warfare on shallow waters!"
  kabonen_adapting_local_administration: "Adapting Locals into Administration"
- kabonen_adapting_local_administration_desc: "Frankrani are the minority in our new homeland, and we can't sustain our administration without applying a coexistence policies. Locals now will be allowed into lower layers of our Administration."
+ kabonen_adapting_local_administration_desc: "Mawaqi are the minority in our new homeland, and we can't sustain our administration without applying a coexistence policies. Locals now will be allowed into lower layers of our Administration."
  kabonen_bkuslcuht_trade_dominance: "Bkuslcuht Trade Dominance"
  kabonen_bkuslcuht_trade_dominance_desc: "With our superior naval doctrine, we are the only Bkuslcuht nation that managed to fend off successfully the Matriarchal Pirates, which raised our merchants prestige accordingly, making trade domination of the whole region a possibility."
  kabonen_adapting_legal_codex: "Kabonenian Legal Codex"
