--- a/localisation/TD_01_flavour_wirosepan_l_english.yml
+++ b/localisation/TD_01_flavour_wirosepan_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  #Deities
  his_authority: "Saletiarn the Righteous"
- his_authority_desc: "We will live under our ruler, just as humanity lives under Saletiarn."
+ his_authority_desc: "We will live under our [Root.Owner.Monarch.GetName], just as humanity lives under Saletiarn."
  his_humility: "Saletiarn the Humble"
  his_humility_desc: "There is no one in the world just as humble as Saletiarn."
  his_bravery: "Saletiarn the Brave"
@@ -16,7 +16,7 @@
  wirosepan_select_aspect: "Favoured Aspect of Saelius"
 
  his_authority_mod: "Saletiarn the Righteous"
- desc_his_authority_mod: "We will live under our ruler, just as humanity lives under Saletiarn."
+ desc_his_authority_mod: "We will live under [Root.Owner.Monarch.GetName], just as humanity lives under Saletiarn."
  his_humility_mod: "Saletiarn the Humble"
  desc_his_humility_mod: "There is no one in the world just as humble as Saletiarn."
  his_bravery_mod: "Saletiarn the Brave"
@@ -118,20 +118,20 @@
 
  #Events
  wirosepan.1.t: "Church of Paramount Righteousness"
- wirosepan.1.desc: "REPLACE_ME"
- wirosepan.1.a: "REPLACE_ME"
+ wirosepan.1.desc: "Dedicated to the righteousness of Saletiarn, its stonework is grand and intricate, with stained glass windows depicting his life of virtue. A central rose window and two tall spires mark the front of the church, with a heavy wooden door welcoming all to enter Saletiarns holy place. The passage, while rather empty, is well-lit for an otherwise cold stone room, welcoming guests to the main grand hall with hundreds of seats for all to witness His word.\n\nTeaching loyalty to one another, and to the [Root.Monarch.GetTitle], the clergy preach that a united nation can withstand any hardships from the forces that work against Saletiarn. Petty squabbles only lead to further division between the faithful, and forgoing righteousness is a transgression not only against your fellow people, but to Saletiarn himself."
+ wirosepan.1.a: "May it stand the test of time"
  wirosepan.2.t: "Church of Everlasting Humility"
- wirosepan.2.desc: "REPLACE_ME"
- wirosepan.2.a: "REPLACE_ME"
+ wirosepan.2.desc: "As its name might suggest, the church’s structure is designed in a utilitarian and modest way, with simple brickwork and windows, located in a very remote area with a difficult path leading to its entrance. A small altar lies beyond the main entrance, where many people come to repent for their hedonism, especially the nobility. The clergy lives in beehive huts on the periphery of the church, with only basic needs being met so they may live as close to Saletiarn’s conditions when travelling across Mysentria.\n\nBelieving that a life of luxury and frivolities takes away from a holy life, where people are distracted with debauchery, the faithful abandon such proclivities to seek solace in the bare minimum. Worldly possessions are temporary compared to the ultimate fulfilment found by emulating the great Saletiarn."
+ wirosepan.2.a: "May it stand the test of time"
  wirosepan.3.t: "Church of Unshaken Bravery"
- wirosepan.3.desc: "REPLACE_ME"
- wirosepan.3.a: "REPLACE_ME"
+ wirosepan.3.desc: "Built durably to both act as a place of worship and a fortification, the church includes battlements and a moat, while still keeping a sizable hall for worship. Several dormitories are built into the outskirts of the structure, acting as a barracks for many devout warriors who dedicate themselves to Saletiarn’s virtue of bravery. A large courtyard in the center of the grounds is outfitted with plenty of training equipment, with many of the clergy being trained in the art of swordsmanship, honing their skills ever more after sermons.\n\nThe devotees of the church often involve themselves in military matters, either as advisors or soldiers, with their martial lives being greatly beneficial to armies they assist. Strictly punishing cowardice and rewarding bravery, they do not shy away from risking their lives to save fellow compatriots, believing the act of sacrifice to be paramount to their tenets."
+ wirosepan.3.a: "May it stand the test of time"
  wirosepan.4.t: "Church of Boundless Mercy"
- wirosepan.4.desc: "REPLACE_ME"
- wirosepan.4.a: "REPLACE_ME"
+ wirosepan.4.desc: "Desiring to have a welcoming building, the church is built with smooth stones with colourful murals on the outside walls, with open courtyards and minimal fencing and gates. Having great trust in the act of forgiveness towards unbelievers, the clergy of this church have made it their goal to welcome people from all walks of life to experience Saletiarn’s glory. Acting as a haven to the lost and forgotten, the clergy welcomes anyone to their grounds and offers refuge and rest.\n\nIn the center of the main church hall, lies a pool of saltwater, where it is believed that all trespasses are cleansed from a person once submerged underneath. The act of reform and mercy is of utmost importance, for anger leads to hate, and hate to suffering of unparalleled degree."
+ wirosepan.4.a: "May it stand the test of time"
  wirosepan.5.t: "Church of Selfless Generosity"
- wirosepan.5.desc: "REPLACE_ME"
- wirosepan.5.a: "REPLACE_ME"
+ wirosepan.5.desc: "Located nearby to a local town, the adherents of the church believe in helping the local people no matter the scale nor how trivial the task may be. Encouraging the development of a close-knit fellowship, townspeople are often invited within the grounds and offered hospitality and sermons dedicated to Saletiarn’s generosity. Bound to their creed, the devoted do not rest until they resolve an issue, whether it be personal, or between a large group of people, frequently acting as mediators in disputes.\n\nThe close proximity to the ordinary way of life compared to their zealous one is one made intentionally, for them to resist the temptation of idleness and decadence seen among the common folk. These temptations however often prove to not stand a chance against the devoted, as they stalwartly stand against them, and proving that an ordinary life is not appealing compared to the eternal generosity shown by Saletiarn."
+ wirosepan.5.a: "May it stand the test of time"
  wirosepan.6.t: "Church of Relentless Ambition"
- wirosepan.6.desc: "REPLACE_ME"
- wirosepan.6.a: "REPLACE_ME"
+ wirosepan.6.desc: "Created with extravagant designs, the church stands taller than all structures in its vicinity, with its high clock tower highlighting the imposing structure ever more. Grand stained windows adorn not only the exterior walls, but also sectioning the rooms with a grandeur much more prominently than standard stone. The altar is decorated with precious stones and metals, with numerous benches handcrafted from fine wood to accommodate visitors. The luxuries are not seen as distractions from their faith, but rather a dedication to Saletiarn, with only the highest quality of crafts being housed to glorify Him.\n\nBeing greatly interested in self growth, the followers of the church spend their time learning, training and leading, often being in leadership positions across many areas. Some try to reach the same heights Saletiarn has, but even the thought of surpassing them is a taboo across the convent."
+ wirosepan.6.a: "May it stand the test of time"
