--- a/localisation/TD_01_flavour_wirosepan_l_english.yml
+++ b/localisation/TD_01_flavour_wirosepan_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  #Deities
  his_authority: "Saletiarn the Righteous"
- his_authority_desc: "We will live under our [Root.Owner.Monarch.GetName], just as humanity lives under Saletiarn."
+ his_authority_desc: "We will live under [Root.Owner.Monarch.GetName], just as humanity lives under Saletiarn."
  his_humility: "Saletiarn the Humble"
  his_humility_desc: "There is no one in the world just as humble as Saletiarn."
  his_bravery: "Saletiarn the Brave"
