--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -104,3 +104,7 @@
  parrout_region: "Parrout"
  bosonapan_coast_region: "Bosonapan Coast"
  magreinland_region: "Magreinland"
+ husrhadigar_region: "Husrhadigar"
+ medtata_region: "Medtata"
+ diarena_region: "Diarena"
+ murtafia_region: "Murtafia"
