fixes + cofee desc

--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -3,8 +3,8 @@
  chinawareDESC: "Pemenisile represents various exotic goods such as Hengtuan porcelain and carpets. Generally from the Orient, these high value luxuries command a high price on the market."
  cloth: "Cloth"
  clothDESC: "Cloth represents the various fabrics and clothing made from wool and linen. Later cotton, imported from Samadia and the New World, became a major material for cloth."
- coffee: "Coffee" #todo
- #coffeeDESC: "Coffee was discovered in the northeast region of Ethiopia and coffee cultivation first took place in southern Arabia. From the Middle East, coffee spread to Italy in the 17th century and was then introduced to the rest of Europe. Coffee became more widely accepted after it was deemed a Christian beverage by Pope Clement VIII in 1600, despite appeals to ban the 'Muslim drink'."
+ coffee: "Coffee"
+ coffeeDESC: "Coffee was discovered in the Murtafian plateau, from where it spread to Chilverchia in the 17th century and was then introduced to the rest of Mysentria. Coffee became more widely accepted after some Liemarian episcopes were openly fond of this exotic drink."
  copper: "Copper"
  copperDESC: "Copper also includes other non-ferrous metals like lead and tin. Copper was the main component of bronze and was essential in the early production of cannons."
  cotton: "Cotton"
