--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -269,3 +269,15 @@
  matteie_company: "Matteie Charter"
  TRADE_COMPANY_MATTEIE_Root_Culture_GetName: "[Root.Culture.GetName] Okoeruara Company"
  TRADE_COMPANY_MATTEIE_Trade_Company: "Okoeruara Trade Company"
+ medtatan_company: "Medtatan Charter"
+ TRADE_COMPANY_MEDTATAN_Root_Culture_GetName: "[Root.Culture.GetName] Medtata Company"
+ TRADE_COMPANY_MEDTATAN_Trade_Company: "Medtata Trade Company"
+ diarenan_company: "Diarenan Charter"
+ TRADE_COMPANY_DIARENAN_Root_Culture_GetName: "[Root.Culture.GetName] Diarene Company"
+ TRADE_COMPANY_DIARENAN_Trade_Company: "Diarene Trade Company"
+ murtafan_company: "Murtafan Charter"
+ TRADE_COMPANY_MURTAFAN_Root_Culture_GetName: "[Root.Culture.GetName] Murtafia Company"
+ TRADE_COMPANY_MURTAFAN_Trade_Company: "Murtafia Trade Company"
+ umati_company: "Umati Charter"
+ TRADE_COMPANY_UMATI_Root_Culture_GetName: "[Root.Culture.GetName] Husrhadigar Company"
+ TRADE_COMPANY_UMATI_Trade_Company: "Husrhadigar Trade Company"
