--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -114,3 +114,7 @@
  bohemia_tradenode: "Cemitonian Gulf"
  cacumuds_tradenode: "Adrianburg"
  natraki_tradenode: "Natraki"
+ horasaban_tradenode: "Horsaban"
+ husrhadigar_tradenode: "Husrhadigar"
+ murtafia_tradenode: "Murtafia"
+ qontara_tradenode: "Qontara"
