--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -130,13 +130,7 @@
  pusgivah: "Pusgivah"
  frankrani: "Frankrani"
  mawaqi: "Mawaqi"
-
- almurtafan_group: "Almurtafan"
- sefertian: "Sefertian"
-
- mesutian_group: "Mesutian"
- ribyah: "Ribyah"
- maluki: "Maluki"
+ medati: "Medati"
 
  pamkusean_group: "Pamkusean"
  ilikiomenoi: "Ilikiomenoi"
@@ -470,7 +464,7 @@
  debek: "Debek"
  bachebil: "Bachebil"
  dac_kwan: "Dac Kwan"
- da_waq:0 "Da Waq"
+ da_waq: "Da Waq"
 
  atadniu_group: "Atadniu"
  savkoan: "Savkoan"
@@ -566,3 +560,30 @@
  mbania: "Mbania"
  geira: "Geira"
  tene: "Tene"
+
+ almurtafan_group: "Almurtafan"
+ sefertian: "Sefertian"
+ nacnasian: "Nacnasian"
+ machaki: "Machaki"
+ medtate: "Medtate"
+
+ mesutian_group: "Mesutian"
+ ribyah: "Ribyah"
+ maluki: "Maluki"
+ hedasian: "Hedasian"
+ yaern: "Yaern"
+ kwelanian: "Kwelanian"
+
+ diarenan_group: "Diarenan"
+ horasabani: "Horasabani"
+ gedoi: "Gedoi"
+ baddani: "Baddani"
+ lahagi: "Lahagi"
+ angwari: "Angwari"
+
+ umati_group: "Umati"
+ sochoani: "Sochoani"
+ diriinai: "Diriinai"
+
+ cokar_group: "Cokar"
+ kocgat: "Kocgat"
