--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -995,12 +995,12 @@
  PROV994: "Rabia" #hill
  PROV995: "995"
  PROV996: "Fawud"
- PROV997: "997"
- PROV998: "998"
+ PROV997: "Begiahafa"
+ PROV998: "Werinu"
  PROV999: "999"
- PROV1000: "1000"
- PROV1001: "1001"
- PROV1002: "1002"
+ PROV1000: "Ehagede" #foreigner
+ PROV1001: "Kihaleb" #Most Magnanimous
+ PROV1002: "Jawasen" #Middle
  PROV1003: "Mustir Mountains"
  PROV1004: "Igbašan"
  PROV1005: "Ilimun"
@@ -1105,7 +1105,7 @@
  PROV1104: "Albajar"
  PROV1105: "Nutarban"
  PROV1106: "Germusal"
- PROV1107: "1107"
+ PROV1107: "Nahas" #copper
  PROV1108: "Malhna"
  PROV1109: "Dantalt"
  PROV1110: "Mazarf"
@@ -1124,11 +1124,11 @@
  PROV1123: "Masseqan" #ascent
  PROV1124: "Qalayahm" #hilly area
  PROV1125: "Zabareth"
- PROV1126: "1126"
- PROV1127: "1127"
+ PROV1126: "Jakare" #gem
+ PROV1127: "Alafa" #pass
  PROV1128: "Qabahan" #hill
  PROV1129: "Kuhtah" #cavern
- PROV1130: "1130"
+ PROV1130: "Sefert"
  PROV1131: "Guhrah" #small cave
  PROV1132: "Takatah" #captital city
  PROV1133: "Awlonay" #rural valley
@@ -1503,7 +1503,7 @@
  PROV1502: "Nooro"
  PROV1503: "Nguboka"
  PROV1504: "Pakubmak"
- PROV1505: "1505"
+ PROV1505: "Werinu Sea"
  PROV1506: "Bahhib"
  PROV1507: "Otokoman"
  PROV1508: "Lemuyal"
@@ -1530,7 +1530,7 @@
  PROV1529: "Ku'lajax"
  PROV1530: "Xilapacutlan"
  PROV1531: "Kinchi"
- PROV1532: "1532"
+ PROV1532: "Begiahafa Coast"
  PROV1533: "Ebuha"
  PROV1534: "Pahachok"
  PROV1535: "Itziwika"
@@ -4541,51 +4541,51 @@
  PROV4540: "Yaern"
  PROV4541: "Qontara" #spear
  PROV4542: "Hawab" #Coast forest
- PROV4543: "4543"
- PROV4544: "4544"
- PROV4545: "4545"
- PROV4546: "4546"
- PROV4547: "4547"
- PROV4548: "4548"
- PROV4549: "4549"
+ PROV4543: "Kuhedas"
+ PROV4544: "Mirgeda"
+ PROV4545: "Emeba" #fortress
+ PROV4546: "Medare" #harbour
+ PROV4547: "Eyala" #lumberyard
+ PROV4548: "Asa" #fishery
+ PROV4549: "Maresa" #haven
  PROV4550: "Asymon" #desert
  PROV4551: "Kwelan"
  PROV4552: "Apasis"
- PROV4553: "4553"
+ PROV4553: "Mambuoy" #beginning
  PROV4554: "Barnahra" #land across the river
- PROV4555: "4555"
- PROV4556: "4556"
+ PROV4555: "Almurtaf"
+ PROV4556: "Dinigiza"
  PROV4557: "4557"
- PROV4558: "4558"
- PROV4559: "4559"
- PROV4560: "4560"
- PROV4561: "4561"
- PROV4562: "4562"
- PROV4563: "4563"
- PROV4564: "4564"
- PROV4565: "4565"
- PROV4566: "4566"
- PROV4567: "4567"
- PROV4568: "4568"
- PROV4569: "4569"
- PROV4570: "4570"
- PROV4571: "4571"
- PROV4572: "4572"
- PROV4573: "4573"
- PROV4574: "4574"
- PROV4575: "4575"
- PROV4576: "4576"
- PROV4577: "4577"
- PROV4578: "4578"
- PROV4579: "4579"
- PROV4580: "4580"
- PROV4581: "4581"
- PROV4582: "4582"
+ PROV4558: "Megebe"
+ PROV4559: "Almurtaf"
+ PROV4560: "Wata" #rise
+ PROV4561: "Almurtaf"
+ PROV4562: "Werkore"
+ PROV4563: "Almurtaf"
+ PROV4564: "Kafe" #high
+ PROV4565: "Samera"
+ PROV4566: "Maleged"
+ PROV4567: "Kash"
+ PROV4568: "Yemiyaber"
+ PROV4569: "Almurtaf"
+ PROV4570: "Almurtaf"
+ PROV4571: "Yaga" #highland
+ PROV4572: "Arenash"
+ PROV4573: "Medyala" #valley
+ PROV4574: "Dabere"
+ PROV4575: "Handebas"
+ PROV4576: "Efar"
+ PROV4577: "Gueefof" #ridge
+ PROV4578: "Muotedar" #dead coast
+ PROV4579: "Tarara" #mountain
+ PROV4580: "Kuorefet" #hill
+ PROV4581: "Tanasa" #rise
+ PROV4582: "Gabiy" #market
  PROV4583: "4583"
- PROV4584: "4584"
- PROV4585: "4585"
- PROV4586: "4586"
- PROV4587: "4587"
+ PROV4584: "Almurtaf"
+ PROV4585: "Almurtaf"
+ PROV4586: "Mesiyewa"
+ PROV4587: "Tettaka"
  PROV4588: "4588"
  PROV4589: "4589"
  PROV4590: "4590"
