--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -506,4 +506,23 @@
  parroutan_pantheonss_rebels_army: "$RELIGION$ Army"
  parroutan_pantheons_rebels_demand: "Convert $COUNTRYNAME$"
  albasa: "Albasa"
+
+ hayusidi: "Hayusidi"
+ hayusidi_religion_desc: ""
+ hayusidi_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ hayusidi_rebels_title: "Religious"
+ hayusidi_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ hayusidis_rebels_army: "$RELIGION$ Army"
+ hayusidi_rebels_demand: "Convert $COUNTRYNAME$"
+ maqana: "Maqana"
+
+ midnima: "Midnima"
+ midnima_religion_desc: ""
+ midnima_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ midnima_rebels_title: "Religious"
+ midnima_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ midnimas_rebels_army: "$RELIGION$ Army"
+ midnima_rebels_demand: "Convert $COUNTRYNAME$"
+ hayasi: "Hayasi"
+ 
  
