--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1577,5 +1577,5 @@
  KWL_ADJ: "Kwalenian"
  PAT: "Patrep"
  PAT_ADJ: "Patrepian"
- YAE: "Yaern"
- YAE_ADJ: "Yaernian"
+ YAE: "Yaer"
+ YAE_ADJ: "Yaerian"
